maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:2: error: illegal start of simple expression
  while () {
         ^Escaper:9: error: ')' expected but '}' found.
}
^