maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall() {
  while () {
    gauche()
    if (estFaceMur()) {
      droite() ; avance()
    }
  }
  
}




override def run() {
  while(!estSurBicuit()) {
    while (estFaceMur()) {
      gauche() 
      if (estFaceMur()) {
        droite() ; avance()
      }
    }
  }
}